--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,16 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
     "lib": [
       "es2020",
       "dom"
+    ],
+    "types": [
+      "node"
     ]
   },
   "angularCompilerOptions": {
